# jnlp-token-injection-rust

./: .gitignore  Cargo.toml  README.md  sample.xml  test.sh  wrangler.toml
src/: lib.rs
