[package]
name = "jnlp-token-injection-rust"
version = "0.1.0"
edition = "2021"
authors = ["jongsik <jongsik@cloudflare.com>"]

[package.metadata.release]
release = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6" }
worker-macros = { version = "0.6" }
console_error_panic_hook = { version = "0.1.7" }
sha2 = "0.10.9"
base64 = "0.22.1"
hmac = "0.12.1"
js-sys = "0.3.78"
urlencoding = "2.1.3"
regex = "1.11.2"
